# docrepr

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  Readme.md  SECURITY.md  __init__.py  conftest.py  fabfile.py  foo.py  pytest.ini  setup.cfg  setup.py  sphinxify.py  utils.py
.github/: pull_request_template.md
.github/workflows/: test.yaml  update_reference_screenshots.yaml  visual_regression_test.yaml
docrepr/: __init__.py  conf.py  sphinxify.py  utils.py  webview.py
docrepr/js/: collapse_sections.js  copy_button.js  fix_image_paths.js  math_config.js  move_outline.js  utils.js
docrepr/sphinxext/: __init__.py  plot_directive.py
docrepr/static/css/: default.css
docrepr/templates/: layout.html  rich_repr.html  warning.html
docrepr/tests/: __init__.py  test_output.py
oinspect/: __init__.py  conf.py  sphinxify.py  utils.py
oinspect/js/: copy_button.js
oinspect/static/css/: default.css
oinspect/templates/: layout.html  rich_repr.html
